tests/FSharp.Analyzers.Tests/data/virtualcall/negative/SetFoldOnSet.fs
module M

let f () =
    let mySet = set [1..10]
    Set.fold (+) 0 mySet // should not warn
